bugfix: firefox alignment

--- a/src/themeToggler.module.css
+++ b/src/themeToggler.module.css
@@ -29,6 +29,7 @@
   transition: 0.4s;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .slider:before {
